[project]
name = "triage"
version = "0.1.0"
description = "Support ticket triage system"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "openai",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
packages = ["tasks", "server"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"